2011-03-31  Eric Blake  <eblake@redhat.com>

	nonblocking: fix mingw test failures
	* lib/nonblocking.c (set_nonblocking_flag): Succeed when clearing
	non-blocking flag on regular file.
	(get_nonblocking_flag): Set errno on invalid fd.
	* tests/test-nonblocking.c (main): Avoid test failure on
	directories if fchdir is not active.
	* modules/nonblocking-tests (Depends-on): Drop unused dependency.

2011-03-31  Bruno Haible  <bruno@clisp.org>

	Fix bug with gl_WARN_ON_USE_PREPARE, introduced on 2011-01-23.
	* m4/gnulib-common.m4 (gl_ASSERT_NO_GNULIB_POSIXCHECK): Hide the
	gl_WARN_ON_USE_PREPARE definition from 'aclocal'.
	Reported by Simon Josefsson <simon@josefsson.org>.

2011-03-31  Bruno Haible  <bruno@clisp.org>
	and Eric Blake  <eblake@redhat.com>

	nonblocking: new module
	* modules/nonblocking: New module.
	* modules/nonblocking-tests: Likewise.
	* lib/nonblocking.h: New file.
	* lib/nonblocking.c: Likewise.
	* tests/test-nonblocking.c: New test.
	* lib/ioctl.c (ioctl) [mingw]: Update comment.

2011-03-30  Bruno Haible  <bruno@clisp.org>

	stdio: Avoid GCC >= 4.4 warnings when using %lld and similar on mingw.
	* lib/stdio.in.h (_GL_ATTRIBUTE_FORMAT_PRINTF): Use 'gnu_printf' format
	instead of 'printf' format for GCC >= 4.4.
	(_GL_ATTRIBUTE_FORMAT_PRINTF_SYSTEM): New macro.
	(fprintf, printf, vfprintf, vprintf): Declare with
	_GL_ATTRIBUTE_FORMAT_PRINTF_SYSTEM when the function ends up calling
	the system's vfprintf() function.
	Reported by Daniel P. Berrange <berrange@redhat.com> via Eric Blake.

2011-03-30  Eric Blake  <eblake@redhat.com>

	passfd: fix scoping bug
	* lib/passfd.c (sendfd, recvfd): Don't let buf go out of scope
	before sendmsg/recvmsg.

	passfd: standardize coding conventions
	* m4/afunix.m4 (gl_SOCKET_AFUNIX): Drop check for something that
	can be learned at compile time.
	* lib/passfd.c (MSG_CMSG_CLOEXEC): Reduce number of in-function
	ifdefs.
	(sendfd, recvfd): Follow gnulib code conventions.

	passfd: fix incorrect sendmsg arguments