@@ -7,6 +7,7 @@ lib/wcpncpy-impl.h
 m4/wcpncpy.m4
 
 Depends-on:
+extensions
 wchar
 
 configure.ac:
